--- a/asset/css/styles.scss
+++ b/asset/css/styles.scss
@@ -1,6 +1,16 @@
 $main-font-family: "Poppins", sans-serif;
 $logo-font-family: "Nunito", sans-serif;
 
+/* main font weight*/
+$font-weight-main-regular: 400;
+$font-weight-main-medium: 500;
+$font-weight-main-semibold: 600;
+$font-weight-main-bold: 700;
+/*----------*/
+
+// font weight logo
+$font-weight-logo-bold: 700;
+
 *,
 *::after,
 *::before {
@@ -16,6 +26,7 @@ html {
 .header {
   padding: 0 6.4rem;
   padding-top: 3.6rem;
+  font-family: $main-font-family;
   background-image: linear-gradient(
       to right,
       rgba(13, 13, 32, 0.3),
@@ -30,10 +41,55 @@ html {
   .header__navigasi {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     // margin-top: 3.6rem;
 
     .header__logo-box .logo {
       font-size: 3.8rem;
+      color: #fff;
+      font-weight: $font-weight-logo-bold;
+      font-family: $logo-font-family;
+    }
+
+    .nav ul {
+      display: flex;
+      gap: 3rem;
+      justify-content: space-between;
+      align-items: center;
+    }
+    .nav ul li {
+      list-style: none;
+
+      .link-item:link,
+      .link-item:visited {
+        text-decoration: none;
+        font-size: 1.6rem;
+        font-weight: $font-weight-main-medium;
+        color: #bbbdc3;
+        display: inline-block;
+        position: relative;
+      }
+      .link-item::after {
+        content: "";
+        width: 50%;
+        height: 100%;
+        display: inline-block;
+        position: absolute;
+        bottom: -20%;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+
+      .link-item:active {
+        color: #fff;
+      }
+
+      .link-item:hover {
+        color: #fff;
+      }
+      .link-item:hover::after {
+        border-bottom: 3px solid #fff;
+      }
     }
   }
 }
